add bluepy and its dpendencies to 'source'

--- a/compose/source/Dockerfile
+++ b/compose/source/Dockerfile
@@ -1,4 +1,14 @@
-FROM python:3.8
+FROM python:3.8-slim-buster
+
+RUN apt-get update \
+  # dependencies for building Python packages
+  && apt-get install -y build-essential \
+  # bluepy dependencies
+  && apt-get install -y libglib2.0-dev \
+#   && apt-get install -y python3-pip \
+  # cleaning up unused files
+  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+  && rm -rf /var/lib/apt/lists/*
 
 COPY ./source/requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip
